deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gridiron
  labels:
    kubernetes.io/metadata.name: gridiron
