deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gridiron-2000
  namespace: gridiron
  labels:
    app: gridiron-2000
spec:
  type: ClusterIP
  selector:
    app: gridiron-2000
  ports:
    - name: http
      port: 80
      targetPort: http
